--- a/src/Components/Chat/ChatBox.css
+++ b/src/Components/Chat/ChatBox.css
@@ -16,6 +16,7 @@
   overflow-y: scroll;
   padding: 10px;
   color: black;
+  scroll-behavior: smooth; 
 }
 
 /* Input Form */
@@ -24,7 +25,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #f4f4f4;
+  background-color: #9a9a9a;
   box-sizing: border-box;
   position: absolute;
   bottom: 0;
@@ -38,7 +39,7 @@
   width: 70%;
   margin-right: 10px;
   padding: 10px;
-  border: 1px solid #E0E0E0;
+  border: 1px solid black;
   background-color: #fff;
   color: black;
   border-radius: 5px;
@@ -46,15 +47,22 @@
 
 /* Send Button */
 #formEl button {
-  background-color: #007BFF;
+  background-color: black;
   color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: 8px;
   padding: 8px 15px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+  width: 75px;
+  height: 38px;
+  font-size: 17px;
+  /* width: calc(30% - 4vmin);
+  height: calc(5vmin - 2px);
+  font-size: calc(1vw + 1vh - 2px); */
 }
 
 #formEl button:hover {
-  background-color: #0056b3;
+  background-color: rgb(50, 50, 50);
+  color: white;
 }
